# ChatApp-LLD

./: .gitignore  README.md  main.py  pyproject.toml
src/entities/: __init__.py  conversation.py  message.py  user.py
src/repositories/: message_repository.py
src/services/: __init__.py  chat_server.py  conversation_factory.py
